--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.6.0",
     "@hubspot/api-client": "^11.1.0",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.2",
     "next": "14.2.4",
+    "notistack": "^3.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
+    "yup": "^1.4.0"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
