--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.20",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "countries-and-timezones": "^3.6.0",
     "next": "14.2.4",
     "notistack": "^3.0.1",
@@ -26,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-international-phone": "^4.3.0",
+    "tailwind-merge": "^2.3.0",
     "yup": "^1.4.0"
   },
   "lint-staged": {
