--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-international-phone": "^4.3.0",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "yup": "^1.4.0"
   },
