--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "postcss": "^8",
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@next/swc-linux-x64-musl": "14.2.4",
+    "@next/swc-linux-x64-gnu": "14.2.4"
   }
 }
