Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_talenteweb.yml
+++ b/.github/workflows/main_talenteweb.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - talenteWeb
+name: Build and deploy Node.js app to Azure Web App - TalenteWeb
 
 on:
   push:
@@ -56,7 +56,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'talenteWeb'
+          app-name: 'TalenteWeb'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FDDD0C7755384ED982078B2EEDC80B18 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E05AE1CF065645A39D4AD41B9C10F981 }}
