--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 8080",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start --port 8080",
+    "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
     "prettier": "prettier --write ."
