--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 8080",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start --port 8080",
+    "start": "node server.js",
     "lint": "next lint",
     "prepare": "husky install",
     "prettier": "prettier --write ."
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "countries-and-timezones": "^3.6.0",
+    "express": "^4.19.2",
     "next": "14.2.4",
     "notistack": "^3.0.1",
     "react": "^18",
