--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "prepare": "husky install",
     "prettier": "prettier --write .",
-    "local": "next"
+    "local": "next",
+    "local:serve": "next build && next start"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
