--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lint-staged": "^15.2.7",
     "postcss": "^8",
     "prettier": "^3.3.2",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
