--- a/.github/workflows/main_talentewebapp.yml
+++ b/.github/workflows/main_talentewebapp.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js app to Azure Web App - TalenteWebApp
 on:
   push:
     branches:
-      - prod
+      - main
   workflow_dispatch:
 
 jobs:
@@ -21,19 +21,20 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build
+      - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
-          
+          npm run test --if-present
+
       - name: Zip artifact for deployment
-        run: zip next.zip ./* .next -qr
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: next.zip
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,24 +42,30 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip next.zip
+        run: unzip release.zip
+      
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_ABAF7B842FD44F49A534E8469B9A0A81 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_377E7F1087A744EE8E7946E3733026ED }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D18FE574B46C4B99982CBFB3AAD4E58B }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+        uses: azure/webapps-deploy@v3
         with:
           app-name: 'TalenteWebApp'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4948EB7073944B5EBD69D9F2846253DD }}
           package: .
-
-      - name: Delete zip file
-        run: rm next.zip
+          
