Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_talentewebapp.yml
+++ b/.github/workflows/main_talentewebapp.yml
@@ -42,9 +42,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -54,13 +52,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_ABAF7B842FD44F49A534E8469B9A0A81 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_377E7F1087A744EE8E7946E3733026ED }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D18FE574B46C4B99982CBFB3AAD4E58B }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -68,4 +59,4 @@ jobs:
           app-name: 'TalenteWebApp'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EC13F51688134530AEA9107327EBCE64 }}
