--- a/.github/workflows/main_talentewebapp.yml
+++ b/.github/workflows/main_talentewebapp.yml
@@ -25,16 +25,16 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip all files for upload between jobs
+      # IMPORTANT: .next is a hidden folder and will NOT be included in the zip unless we specify it
+        run: zip next.zip ./* .next -qr
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: next.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -48,9 +48,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
       
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -58,5 +55,7 @@ jobs:
         with:
           app-name: 'TalenteWebApp'
           slot-name: 'Production'
-          package: .
+          package: next.zip
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EC13F51688134530AEA9107327EBCE64 }}
+      - name: Delete zip file
+        run: rm next.zip
