--- a/.github/workflows/main_talentewebapp.yml
+++ b/.github/workflows/main_talentewebapp.yml
@@ -17,24 +17,25 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build 
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Copy static files
+        run: |
+          cp -R ./public ./.next/standalone/public
+          cp -R ./.next/static ./.next/standalone/.next/static
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: release.zip
+          name: app
+          path: ./.next/standalone
 
   deploy:
     runs-on: ubuntu-latest
